B&L QA/objects/CPQBusinessValidationRules__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>custom object for CPQ approval process</description>
    <fields>
        <fullName>CataractMarginDirectorMin__c</fullName>
        <label>Cataract Margin Director Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RetinaMarginDirectorMin__c</fullName>
        <label>Retina Margin Director Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalDealMarginDirectorMin__c</fullName>
        <label>Total Deal Margin Director Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalDealMarginRBDMax__c</fullName>
        <label>Total Deal Margin RBD Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalDealMarginRBDMin__c</fullName>
        <label>Total Deal Margin RBD Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalDealMargin_Allowed_NonDiscFlrPrice__c</fullName>
        <description>TotalDealMargin_Allowed%Under non Discounted Floor Price</description>
        <label>TotalDealMargin_Allowed%NonDiscFlrPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>CPQ Business Validation Rules</label>
</CustomObject>